--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 								</section>
 							</div>
 							<ul class="actions">
-								<li><a href="assets\css\images\Łukasz Karasiński.pdf" class="button">Show CV</a></li>
+								<li><a href="assets\css\images\Łukasz Karasiński.pdf" class="button" target="_blank">Show CV</a></li>
 								<li><a href="https://github.com/Nissmel/nissmel.github.io/raw/master/assets/css/images/%C5%81ukasz%20Karasi%C5%84ski.pdf" class="button">Download CV - PDF </a></li>
 							</ul>
 						</div>
