--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Project 1</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>PC fan controll via Arduino</h2>
+									<p>	Are you in need to find your perfet dog breed? No worry, I got you. Chooseyourpuppy is site created to help you find your perfect match based on information you provide. Do not hesitate - try it!</p>
+									<p>Technology used: Java + Swing, C++</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Check it out here</a></li>
+										<li><a href="https://github.com/Nissmel/PC-fan-control-via-Arduino/tree/master" class="button" target="_blank">View code</a></li>
 									</ul>
 								</div>
 							</div>
@@ -61,10 +62,11 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Project 2</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Space Invaders</h2>
+									<p>One of the best retro game recreated in Java.</p>
+									<p>Technology used: Java + Swing</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Check it out here</a></li>
+										<li><a href="https://github.com/Nissmel/Space-Invaders-/tree/master/Space%20Invaders" class="button" target="_blank">View code</a></li>
 									</ul>
 								</div>
 							</div>
@@ -73,10 +75,12 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Project 3</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>Choose your puppy</h2>
+									<p>	Are you in need to find your perfet dog breed? No worry, I got you. Chooseyourpuppy is site created to help you find your perfect match based on information you provide. Fill out the form and find your life companion. Do not hesitate - try it!</p>
+									<p>Technology used: MySQL, PHP, HTML, CSS</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Check it out here</a></li>
+										<li><a href="generic.html" class="button" target="_blank">View code</a></li>
+										<li><a href="http://chooseyourpuppy.pl/" class="button" target="_blank">Visit site</a></li>
 									</ul>
 								</div>
 							</div>
