--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<p>One of the best retro game recreated in Java.</p>
 									<p>Technology used: Java + Swing</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Nissmel/Space-Invaders-/tree/master/Space%20Invaders" class="button" target="_blank">View code</a></li>
+										<li><a href="https://github.com/Nissmel/Space-Invaders-" class="button" target="_blank">View code</a></li>
 									</ul>
 								</div>
 							</div>
