--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="icon" type="image/png" href="images/fav.png">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Exo&display=swap" rel="stylesheet">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -34,9 +35,13 @@
 
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
-						<div class="inner">
+					<div class="inner">
+					<div class="container">
 							<h1>Łukasz Karasiński</h1>
-							<p>Bla bla so smart so wanna give me money</p>
+							<p1>Bla bla so smart so wanna give me money</p1>
+						</div>
+						
+							
 							<ul class="actions">
 								<!--  <li><a href="#one" class="button scrolly">Projects</a></li> -->
 							</ul>
@@ -77,7 +82,8 @@
 								<div class="inner">
 									<h2>Choose your puppy</h2>
 									<p>	Are you in need to find your perfet dog breed? No worry, I got you. Chooseyourpuppy is site created to help you find your perfect match based on information you provide. Fill out the form and find your life companion. Do not hesitate - try it!</p>
-									<p>Technology used: MySQL, PHP, HTML, CSS</p>
+									<p>Technology used on website: MySQL, PHP, HTML, CSS</p>
+									<p>Technology used in Java app: Java, Swing, , Apache, MySQL</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button" target="_blank">View code</a></li>
 										<li><a href="http://chooseyourpuppy.pl/" class="button" target="_blank">Visit site</a></li>
@@ -135,53 +141,16 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<p>Feel free to contact me via email or LinkedIn!</p>
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
-										<div class="fields">
-											<div class="field half">
-												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
-											</div>
-											<div class="field half">
-												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
-											</div>
-											<div class="field">
-												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
-											</div>
-										</div>
-										<ul class="actions">
-											<li><a href="" class="button submit">Send Message</a></li>
-										</ul>
-									</form>
-								</section>
-								<section>
 									<ul class="contact">
-										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
-											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-												<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+											<li><a href="mailto: nissmel&#64;gmail.com" class="icon brands fa-font-awesome"><span class="label">Mail</span>&nbsp;&nbsp;&nbsp;nissmel&#64;gmail.com</a></li>
+											<br>
+												<li><a href="https://github.com/Nissmel" class="icon brands fa-github-square"><span class="label">GitHub</span>&nbsp;&nbsp;&nbsp;github.com/Nissmel</a></li>
+												<br>
+												<li><a href="https://www.linkedin.com/in/nissmel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span>&nbsp;&nbsp;&nbsp;linkedin.com/in/nissmel</a></li>
 											</ul>
 										</li>
 									</ul>
