--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 								<div class="inner">
 									<h2>Space Invaders</h2>
 									<p>One of the best retro game recreated in Java.</p>
-									<p>Technology used: Java + Swing</p>
+									<p>Technology used: Java, Swing</p>
 									<ul class="actions">
 										<li><a href="https://github.com/Nissmel/Space-Invaders-" class="button" target="_blank">View code</a></li>
 									</ul>
@@ -81,12 +81,14 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Choose your puppy</h2>
-									<p>	Are you in need to find your perfet dog breed? No worry, I got you. Chooseyourpuppy is site created to help you find your perfect match based on information you provide. Fill out the form and find your life companion. Do not hesitate - try it!</p>
+									<p>Are you in need to find your perfet dog breed? No worry, I got you. Chooseyourpuppy is site created to help you find your perfect match based on information you provide. Fill out the form and find your life companion. Do not hesitate - try it!</p>
+									<p>Additionaly application MyBREEDSViewer was created to allow easy data and image input<p>
 									<p>Technology used on website: MySQL, PHP, HTML, CSS</p>
-									<p>Technology used in Java app: Java, Swing, , Apache, MySQL</p>
+									<p>Technology used in Java app: Java, Swing, Apache, MySQL</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button" target="_blank">View code</a></li>
 										<li><a href="http://chooseyourpuppy.pl/" class="button" target="_blank">Visit site</a></li>
+									    <li><a href="https://github.com/Nissmel/MyBREEDSViewer" class="button" target="_blank">View code</a></li>
+
 									</ul>
 								</div>
 							</div>
