--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<div class="inner">
 					<div class="container">
 							<h1>Łukasz Karasiński</h1>
-							<p1>Bla bla so smart so wanna give me money</p1>
+							<p1>Junior Java developer</p1>
 						</div>
 						
 							
