--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>PC fan controll via Arduino</h2>
@@ -64,9 +63,9 @@
 									</ul>
 								</div>
 							</div>
+							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Space Invaders</h2>
@@ -77,9 +76,9 @@
 									</ul>
 								</div>
 							</div>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Choose your puppy</h2>
@@ -94,6 +93,7 @@
 									</ul>
 								</div>
 							</div>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 						</section>
 					</section>
 
@@ -110,21 +110,48 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Java</h3>
-									<p>Thrue my programing experience I gained expericen in: OOP, Spring MVC, Spring Boot, Maven, Hibernate, Swing</p>
+									<p>Thrue my programing experience I gained expericen in: 
+									<ul class="TechUL">
+											<li>OOP</li>
+											<li>Spring MVC</li>
+											<li>Spring Boot</li>
+											<li>Maven</li>
+											<li>Hibernate</li>
+											<li>Swing</li>
+									<ul>
+						
+									</p>
 								</section>
 							</div>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3>Related</h3>
-									<p>Technologies that I have been using in my projects: MySQL, PHP, Python, C++, HTML, CSS</p>
+									<p>Technologies that I have been using in my projects:
+									<ul class="TechUL">
+											<li>MySQL</li>
+											<li>PHP</li>
+											<li>Python</li>
+											<li>C++</li>
+											<li>HTML</li>
+											<li>CSS</li>
+									</ul>
+									</p>
 								</section>
 							</div>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-desktop"></span>
 									<h3>Other</h3>
-									<p>Tehnologies that I am familiar with: PostgreSQL, JSON, XML, Cinema 4D, Photoshop</p>
+									<p>Tehnologies that I am familiar with: 
+									<ul class="TechUL">
+											<li>PostgreSQL</li>
+											<li>JSON</li>
+											<li>XML</li>
+											<li>Cinema 4D</li>
+											<li>Photoshop</li>
+									</ul>
+									</p>
 								</section>
 							</div>
 
