--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 						<div class="inner">
 							<h2>About me</h2>
 							<p>Currently I study Applied Computer Science - software engineer profile - at the University of Economics in Kraków. For my last 8 years I had been studying IT and programing related subjects and because of that programing became my `go to` subject to learn. 
-							I had my first experience working as Software Engineering Intern in Berlin this year and it proved me that this is what I want to do as my day job.</p>
+							I had my first experience working as Software Engineering Intern in Berlin this year and it proved me that this is what I want to do as my daily job.</p>
 							<p>I do get really enthusiastic and passionate about what I do, I have a high level of curiosity and initiative. I work great in a team as well independently when needed. Beside programing my interests are microcontrollers, 3D printing, 3D graphic and mountain biking.</p>
 							<p>Language-wise: I am fluent in Polish and English and currently I study German and French.</p>
 							
@@ -110,7 +110,7 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Java</h3>
-									<p>Thrue my programing experience I gained expericen in: 
+									<p>Thrue my programing I gained experience in: 
 									<ul class="TechUL">
 											<li>OOP</li>
 											<li>Spring MVC</li>
