--- a/index.html
+++ b/index.html
@@ -68,19 +68,6 @@
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>Space Invaders</h2>
-									<p>One of the best retro game recreated in Java.</p>
-									<p>Technology used: Java, Swing</p>
-									<ul class="actions">
-										<li><a href="https://github.com/Nissmel/Space-Invaders-" class="button" target="_blank">View code</a></li>
-									</ul>
-								</div>
-							</div>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-						</section>
-						<section>
-							<div class="content">
-								<div class="inner">
 									<h2>Choose your puppy</h2>
 									<p>Are you in need to find your perfet dog breed? No worry, I got you. Chooseyourpuppy is site created to help you find your perfect match based on information you provide. Fill out the form and find your life companion. Do not hesitate - try it!</p>
 									<p>Additionaly application MyBREEDSViewer was created to allow easy data and image input<p>
@@ -94,6 +81,19 @@
 								</div>
 							</div>
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+						</section>
+						<section>
+							<div class="content">
+								<div class="inner">
+									<h2>Space Invaders</h2>
+									<p>One of the best retro game recreated in Java.</p>
+									<p>Technology used: Java, Swing</p>
+									<ul class="actions">
+										<li><a href="https://github.com/Nissmel/Space-Invaders-" class="button" target="_blank">View code</a></li>
+									</ul>
+								</div>
+							</div>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 						</section>
 					</section>
 
@@ -113,11 +113,12 @@
 									<p>Thrue my programing I gained experience in: 
 									<ul class="TechUL">
 											<li>OOP</li>
-											<li>Spring MVC</li>
-											<li>Spring Boot</li>
+											<li>Spring (Boot, MVC)</li>
 											<li>Maven</li>
 											<li>Hibernate</li>
 											<li>Swing</li>
+											<li>Thymeleaf</li>
+											<li>Lombok</li>
 									<ul>
 						
 									</p>
