--- a/index.html
+++ b/index.html
@@ -172,11 +172,11 @@
 								<section>
 									<ul class="contact">
 											<ul class="icons">
-											<li><a href="mailto: nissmel&#64;gmail.com" class="icon brands fa-font-awesome"><span class="label">Mail</span>&nbsp;&nbsp;&nbsp;nissmel&#64;gmail.com</a></li>
+											<li><a href="mailto: nissmel&#64;gmail.com" target="_blank" class="icon brands fa-font-awesome"><span class="label">Mail</span>&nbsp;&nbsp;&nbsp;nissmel&#64;gmail.com</a></li>
 											<br>
-												<li><a href="https://github.com/Nissmel" class="icon brands fa-github-square"><span class="label">GitHub</span>&nbsp;&nbsp;&nbsp;github.com/Nissmel</a></li>
+												<li><a href="https://github.com/Nissmel" target="_blank" class="icon brands fa-github-square"><span class="label">GitHub</span>&nbsp;&nbsp;&nbsp;github.com/Nissmel</a></li>
 												<br>
-												<li><a href="https://www.linkedin.com/in/nissmel/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span>&nbsp;&nbsp;&nbsp;linkedin.com/in/nissmel</a></li>
+												<li><a href="https://www.linkedin.com/in/nissmel/" target="_blank" class="icon brands fa-linkedin"><span class="label">LinkedIn</span>&nbsp;&nbsp;&nbsp;linkedin.com/in/nissmel</a></li>
 											</ul>
 										</li>
 									</ul>
