--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>Java</h3>
-									<p>Thrue my programing I gained experience in: 
+									<p>Through my programing I gained experience in: 
 									<ul class="TechUL">
 											<li>OOP</li>
 											<li>Spring (Boot, MVC)</li>
