--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 						</section>
 						<section>
+							<div class="content">
 							<div class="inner">
 									<h2>PC fan controll via Arduino</h2>
 									<p>The app allows user to send current CPU and GPU temperatures to Arduino. Microprocessor accordingly to temp controls 7 fans in a PC and displays data on 2" OLED screen</p>
