--- a/index.html
+++ b/index.html
@@ -84,16 +84,20 @@
 						</section>
 						<section>
 							<div class="content">
-							<div class="inner">
-									<h2>PC fan controll via Arduino</h2>
-									<p>The app allows user to send current CPU and GPU temperatures to Arduino. Microprocessor accordingly to temp controls 7 fans in a PC and displays data on 2" OLED screen</p>
-									<p>Technology used: Java + Swing, C++ (Arduino)</p>
+								<div class="inner">
+									<h2>Choose your puppy</h2>
+									<p>Are you in need to find your perfect dog breed? No worry, I got you. Chooseyourpuppy is a site created to help you find your perfect match based on the information you provide. Fill out the form and find your life companion. Do not hesitate - try it!</p>
+									<p>Additional application MyBREEDSViewer was created to allow easy data and image input<p>
+									<p>Technology used on website: MySQL, PHP, HTML, CSS</p>
+									<p>Technology used in Java app: Java, Swing, Apache, MySQL</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Nissmel/PC-fan-control-via-Arduino/tree/master" class="button" target="_blank">View code</a></li>
+										<li><a href="http://chooseyourpuppy.pl/" class="button" target="_blank">Visit site</a></li>
+									    <li><a href="https://github.com/Nissmel/MyBREEDSViewer" class="button" target="_blank">View code</a></li>
+
 									</ul>
 								</div>
 							</div>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 						</section>
 					</section>
 
