--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>Taco Spring </h2>
-									<p>Simple way to order taco! Simple way to choose ingredients, veryfiry payment and insert delivery address!</p>
+									<h2>PC fan controll via Arduino</h2>
+									<p>	Are you in need to find your perfet dog breed? No worry, I got you. Chooseyourpuppy is site created to help you find your perfect match based on information you provide. Do not hesitate - try it!</p>
 									<p>Technology used: Java + Swing, C++</p>
 									<ul class="actions">
 										<li><a href="https://github.com/Nissmel/PC-fan-control-via-Arduino/tree/master" class="button" target="_blank">View code</a></li>
@@ -69,8 +69,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Choose your puppy</h2>
-									<p>Are you in need to find your perfect dog breed? No worry, I got you. Chooseyourpuppy is a site created to help you find your perfect match based on the information you provide. Fill out the form and find your life companion. Do not hesitate - try it!</p>
-									<p>Additional application MyBREEDSViewer was created to allow easy data and image input<p>
+									<p>Are you in need to find your perfet dog breed? No worry, I got you. Chooseyourpuppy is site created to help you find your perfect match based on information you provide. Fill out the form and find your life companion. Do not hesitate - try it!</p>
+									<p>Additionaly application MyBREEDSViewer was created to allow easy data and image input<p>
 									<p>Technology used on website: MySQL, PHP, HTML, CSS</p>
 									<p>Technology used in Java app: Java, Swing, Apache, MySQL</p>
 									<ul class="actions">
@@ -85,19 +85,15 @@
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>Choose your puppy</h2>
-									<p>Are you in need to find your perfect dog breed? No worry, I got you. Chooseyourpuppy is a site created to help you find your perfect match based on the information you provide. Fill out the form and find your life companion. Do not hesitate - try it!</p>
-									<p>Additional application MyBREEDSViewer was created to allow easy data and image input<p>
-									<p>Technology used on website: MySQL, PHP, HTML, CSS</p>
-									<p>Technology used in Java app: Java, Swing, Apache, MySQL</p>
+									<h2>Space Invaders</h2>
+									<p>One of the best retro game recreated in Java.</p>
+									<p>Technology used: Java, Swing</p>
 									<ul class="actions">
-										<li><a href="http://chooseyourpuppy.pl/" class="button" target="_blank">Visit site</a></li>
-									    <li><a href="https://github.com/Nissmel/MyBREEDSViewer" class="button" target="_blank">View code</a></li>
-
+										<li><a href="https://github.com/Nissmel/Space-Invaders-" class="button" target="_blank">View code</a></li>
 									</ul>
 								</div>
 							</div>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 						</section>
 					</section>
 
