--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 								<div class="inner">
 									<h2>Taco Spring </h2>
 									<p>Simple way to order taco! Simple way to choose ingredients, veryfiry payment and insert delivery address!</p>
-									<p>Technology used: Java + Swing, C++</p>
+									<p>Technology used: Java + Spring, Maven, Hibernate, Lombok</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Nissmel/PC-fan-control-via-Arduino/tree/master" class="button" target="_blank">View code</a></li>
+										<li><a href="https://github.com/Nissmel/Taco-Spring" class="button" target="_blank">View code</a></li>
 									</ul>
 								</div>
 							</div>
