--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<div class="inner">
 					<div class="container">
 							<h1>Łukasz Karasiński</h1>
-							<p1>Junior Java Developer</p1>
+							<p1>Software Engineer</p1>
 						</div>
 						
 							
