--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 						<section>
 							<div class="content">
 								<div class="inner">
-									<h2>Taco Spring </h2>
-									<p>Simple way to order taco! Simple way to choose ingredients, veryfiry payment and insert delivery address!</p>
+									<h2>Game Key Store</h2>
+									<p>Simple way to order game keys! Register your free acount and provide banking inforamtion to but any game key</p>
 									<p>Technology used: Java + Spring, Maven, Hibernate, Lombok</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Nissmel/Taco-Spring" class="button" target="_blank">View code</a></li>
+										<li><a href="https://github.com/Nissmel/GameKeyStore" class="button" target="_blank">View code</a></li>
 									</ul>
 								</div>
 							</div>
@@ -89,7 +89,7 @@
 									<p>The app allows user to send current CPU and GPU temperatures to Arduino. Microprocessor accordingly to temp controls 7 fans in a PC and displays data on 2" OLED screen</p>
 									<p>Technology used: Java + Swing, C++ (Arduino)</p>
 									<ul class="actions">
-										<li><a href="https://github.com/Nissmel/PC-fan-control-via-Arduino/tree/master" class="button" target="_blank">View code</a></li>
+										<li><a href="https://github.com/Nissmel/External-Fan-Control" class="button" target="_blank">View code</a></li>
 									</ul>
 								</div>
 							</div>
@@ -101,8 +101,7 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>About me</h2>
-							<p>Currently I study Applied Computer Science - software engineer profile - at the University of Economics in Kraków. For my last 8 years I had been studying IT and programing related subjects and because of that programing became my `go to` subject to learn. 
-							I had my first experience working as Software Engineering Intern in Berlin this year and it proved me that this is what I want to do as my daily job.</p>
+							<p>I studied Applied Computer Science - software engineer profile - at the University of Economics in Kraków. For my last 8 years I had been studying IT and programing related subjects and because of that programing became my `go to` subject to learn.</p>
 							<p>I do get really enthusiastic and passionate about what I do, I have a high level of curiosity and initiative. I work great in a team as well independently when needed. Beside programing my interests are microcontrollers, 3D printing, 3D graphic and mountain biking.</p>
 							<p>Language-wise: I am fluent in Polish and English and currently I study German and French.</p>
 							
@@ -113,11 +112,9 @@
 									<p>Through my programing I gained experience in: 
 									<ul class="TechUL">
 											<li>OOP</li>
-											<li>Spring (Boot, MVC)</li>
+											<li>Spring</li>
 											<li>Maven</li>
 											<li>Hibernate</li>
-											<li>Swing</li>
-											<li>Thymeleaf</li>
 											<li>Lombok</li>
 									<ul>
 						
@@ -133,7 +130,6 @@
 											<li>MySQL</li>
 											<li>PHP</li>
 											<li>Python</li>
-											<li>C++</li>
 											<li>HTML</li>
 											<li>CSS</li>
 									</ul>
@@ -157,8 +153,8 @@
 							</div>
 
 							<ul class="actions">
-								<li><a href="assets\css\images\Łukasz Karasiński.pdf" class="button" target="_blank">Show CV</a></li>
-								<li><a href="https://github.com/Nissmel/nissmel.github.io/raw/master/assets/css/images/%C5%81ukasz%20Karasi%C5%84ski.pdf" class="button">Download CV - PDF </a></li>
+								<li><a href="https://raw.githubusercontent.com/Nissmel/nissmel.github.io/master/assets/css/images/Lukasz_Karasinski_CV.pdf">Show CV</a></li>
+								<li><a href="https://raw.githubusercontent.com/Nissmel/nissmel.github.io/master/assets/css/images/Lukasz_Karasinski_CV.pdf" class="button">Download CV - PDF </a></li>
 							</ul>
 						</div>
 					</section>
