--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 							</div>
 
 							<ul class="actions">
-								<li><a href="https://raw.githubusercontent.com/Nissmel/nissmel.github.io/master/assets/css/images/Lukasz_Karasinski_CV.pdf">Show CV</a></li>
+								<li><a href="https://raw.githubusercontent.com/Nissmel/nissmel.github.io/master/assets/css/images/Lukasz_Karasinski_CV.pdf" class="button">Show CV</a></li>
 								<li><a href="https://raw.githubusercontent.com/Nissmel/nissmel.github.io/master/assets/css/images/Lukasz_Karasinski_CV.pdf" class="button">Download CV - PDF </a></li>
 							</ul>
 						</div>
